# rag-and-tables

./: README.md  pyproject.toml  run_experiment.sh
chunks/: chunk_decomp.txt  chunk_reveng.txt  generate_all_chunks.sh  generate_chunk_multimodal.py  generate_chunk_pypdf.py
experiment/: calc_similarity.py  embedding_comparisons.csv  run_experiment.sh
figs/reading_pdf/: read_pdftotext.py  read_pypdf.py  table_example_fig.pptx
figs/similarity_comp/: calc_similarity.py  chunk_decomp.txt  chunk_pypdf.txt  chunk_reveng.html  plot_comparison.py
pdf/: tables.tex  tables_pdf_stream.txt
prompts/: decomposition.txt  reverse_engineering.txt  table_image_b64.txt
